--- a/x/academy/ไฟฟ้า.html
+++ b/x/academy/ไฟฟ้า.html
@@ -55,7 +55,12 @@
 
 <script>
     const videoIds = [
-'gneJfD9m1YI','VgxgqbYVEHY','TG__fe_FNf4','Y9F39936aiw','vrTMKz1069s','9u6pWOI4zPc','-urdg61prfg','WNx-bwlTATI','lgsF-5E8vPM','z0-cxsfBelw','ijD82dWufRA','Dh9zcStTue0','mA1oEoZ1FX8','fde1KjNyfAQ'  ];
+'gneJfD9m1YI','NqdOyxJZj0U','VgxgqbYVEHY','sENgdSF8ppA',
+'TG__fe_FNf4','Ca-HKXIFi_A','Y9F39936aiw','OzS7fKq-S6Y',
+'vrTMKz1069s','7iYXMvaDiO8','9u6pWOI4zPc','i0kbEWLZhtY',
+'-urdg61prfg','XcFOOfqfx3s','WNx-bwlTATI','IcuR6ecF9xE',
+'lgsF-5E8vPM','8WHMmoj48Bg','z0-cxsfBelw','FpfDz1Ar5Vo',
+'ijD82dWufRA','ZLhZieGVjLc','Dh9zcStTue0','gaHKsyufM_4','mA1oEoZ1FX8','J1AA3ws-cQ4','fde1KjNyfAQ'  ];
     const totalVideos = videoIds.length;
 
 
