--- a/upload/index.html
+++ b/upload/index.html
@@ -219,20 +219,21 @@ function howto() {
   Swal.fire({
     html: `
       <div style="position:relative;padding-top:56.25%;height:0;">
-        <iframe 
-          src="https://www.youtube.com/embed/PHarRl9NRBI?si=TzvMSBGcmdpkOVGS" 
-          title="YouTube video player" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          referrerpolicy="strict-origin-when-cross-origin" 
-          allowfullscreen
-          style="position:absolute;top:0;left:0;width:100%;height:100%;"
-        ></iframe>
+        <iframe src="https://www.facebook.com/plugins/video.php?height=264&href=https%3A%2F%2Fwww.facebook.com%2Feditusstudio%2Fvideos%2F895708992320582%2F&show_text=false&width=560&t=0" 
+                width="100%" 
+                height="100%" 
+                style="position:absolute;top:0;left:0;width:100%;height:100%;border:none;overflow:hidden" 
+                scrolling="no" 
+                frameborder="0" 
+                allowfullscreen="true" 
+                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" 
+                allowFullScreen="true">
+        </iframe>
       </div>`,
     showCloseButton: true,
     showCancelButton: false,
     showConfirmButton: false,
-    width: "90%",
+    width: "70%",
     customClass: {
       container: 'sweet-container', // Add your custom class here
     },
@@ -248,6 +249,7 @@ function howto() {
 }
 
 
+
     document.getElementById("two").style.color = "#D6D6D6";
     document.getElementById("three").style.color = "#D6D6D6";
     document.querySelector('.one').classList.add('animate__animated', 'animate__lightSpeedInLeft');
@@ -259,7 +261,7 @@ function howto() {
    
 
 
-        const accessToken = 'sl.B4LncVQ-TGWbRhD5O72uzO3KAhbaZIjpIAejub8UfTDxDmj5dfZK8BWspi1k0oIeWUhAAckNWDXQgmJ6zXmRU76JxO8qzLyLE8ECtBUh6C2EViTZMoK_3YQ8NmcB0hl8XwfmeTS6f9554E7Ihvlue68'
+        const accessToken = 'sl.B4Leap7JLC6r8GUjt5vg9XPPTi8bow0rxn_h9eX1BgUPJzGf5Oh3Z3dff4CxDS4G-cuacg33Hg8T3RDd-cjunOkpg-vwHWgGkMK09a8pk26Jyc70TLbp4GG1pfUJ2gSAerIiN7qS-cblwTL8GI73u4k'
         function uploadFile(fileData, fileName) {
             const url = 'https://content.dropboxapi.com/2/files/upload';
             const headers = {
