--- a/redzone/index.html
+++ b/redzone/index.html
@@ -71,7 +71,7 @@
     <button type="button" class="btn btn-danger btn-lg" onclick="save()">💾กดบันทึกไฟล์</button>
 </div>
     <hr>
-    <span style="background-color: black; color: white; padding: 5px 10px; border-radius: 5px;">วิธีบันทึกไฟล์ลงเครื่อง</span>
+    <span style="background-color: rgb(80, 80, 80); color: white; padding: 5px 10px; border-radius: 5px;">>_วิธีบันทึกไฟล์ลงเครื่อง</span>
     <br>
     <div id="howto">
     <table border="0">
