--- a/redzone/index.html
+++ b/redzone/index.html
@@ -50,8 +50,6 @@
 }
 #sender {
     height: 50%;
-    display: block;
-    margin: 0 auto;
 }
 
 </style>
@@ -91,7 +89,7 @@
     
     <script>
             clearUrl = window.location.href.replace('https://artnp.github.io/editusstudio/redzone/index.html?', '')
-            document.getElementById("show").innerHTML = '<img id="sender" src="https://i.ibb.co/' + clearUrl + '" style="border: 5px solid red;" onerror="this.onerror=null; this.src=\'404.png\'">'
+            document.getElementById("show").innerHTML = '<img src="https://i.ibb.co/' + clearUrl + '" style="border: 5px solid red; height: 50%;" onerror="this.onerror=null; this.src=\'404.png\'">';
             function save(){
                 window.open('https://i.ibb.co/'+clearUrl)
             }
