--- a/show/index.html
+++ b/show/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Play YouTube Videos Sequentially</title>
+  <title>Play YouTube Videos Sequentially with Error Handling</title>
   <script src="https://www.youtube.com/iframe_api"></script>
   <style>
     /* Optional: CSS for centering the player */
@@ -33,6 +33,17 @@
 
     function onPlayerStateChange(event) {
       if (event.data === YT.PlayerState.ENDED) {
+        currentIndex++;
+        if (currentIndex < videoIds.length) {
+          player.loadVideoById(videoIds[currentIndex]);
+        } else {
+          // Optional: Handle end of playlist, maybe redirect or show a message
+          console.log("End of playlist");
+        }
+      } else if (event.data === YT.PlayerState.ERROR) {
+        // Error handling
+        console.log("Error playing video:", event);
+        // Move to the next video
         currentIndex++;
         if (currentIndex < videoIds.length) {
           player.loadVideoById(videoIds[currentIndex]);
