--- a/show/index.html
+++ b/show/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Play YouTube Videos Sequentially</title>
+  <title>Play YouTube Videos Sequentially with Auto Refresh</title>
   <script src="https://www.youtube.com/iframe_api"></script>
   <style>
     /* Optional: CSS for centering the player */
@@ -21,56 +21,69 @@
 <div id="player"></div>
 
 <script>
-  // YouTube API ready callback
+  var player;
+  var currentIndex = 0;
+  var videoIds;
+
   function onYouTubeIframeAPIReady() {
     // Parse the URL parameter into video IDs array
     var urlParams = decodeURIComponent(window.location.href.split('index.html?')[1]);
-    var videoIds = urlParams.split(',');
+    videoIds = urlParams.split(',');
 
-    var player;
-    var currentIndex = 0;
-
-    function onPlayerReady(event) {
-      event.target.playVideo();
-    }
-
-    function onPlayerStateChange(event) {
-      if (event.data === YT.PlayerState.ENDED) {
-        currentIndex++;
-        if (currentIndex < videoIds.length) {
-          player.loadVideoById(videoIds[currentIndex]);
-        } else {
-          // Optional: Handle end of playlist, maybe redirect or show a message
-          console.log("End of playlist");
-        }
-      }
-    }
-
-    player = new YT.Player('player', {
-      width: window.innerWidth,
-      height: window.innerHeight,
-      videoId: videoIds[currentIndex],
-      playerVars: {
-        'autoplay': 1,
-        'controls': 0,
-        'fs': 1, // Allow fullscreen
-        'loop': 1,
-        'rel': 0,
-        'showinfo': 0,
-        'disablekb': 1,
-        'playlist': videoIds.join(',') // Play all videos in sequence
-      },
-      events: {
-        'onReady': onPlayerReady,
-        'onStateChange': onPlayerStateChange
-      }
-    });
-
-    // Listen for resize events to adjust player dimensions
-    window.addEventListener('resize', function() {
-      player.setSize(window.innerWidth, window.innerHeight);
-    });
+    loadNextVideo();
   }
+
+  function loadNextVideo() {
+    if (currentIndex < videoIds.length) {
+      player = new YT.Player('player', {
+        width: window.innerWidth,
+        height: window.innerHeight,
+        videoId: videoIds[currentIndex],
+        playerVars: {
+          'autoplay': 1,
+          'controls': 0,
+          'fs': 1, // Allow fullscreen
+          'loop': 1,
+          'rel': 0,
+          'showinfo': 0,
+          'disablekb': 1,
+          'playlist': videoIds.join(',') // Play all videos in sequence
+        },
+        events: {
+          'onReady': onPlayerReady,
+          'onStateChange': onPlayerStateChange,
+          'onError': onPlayerError
+        }
+      });
+    }
+  }
+
+  function onPlayerReady(event) {
+    event.target.playVideo();
+  }
+
+  function onPlayerStateChange(event) {
+    if (event.data === YT.PlayerState.ENDED) {
+      currentIndex++;
+      loadNextVideo();
+    }
+  }
+
+  function onPlayerError(event) {
+    // Attempt to reload the player after a delay if there's an error
+    setTimeout(function() {
+      player.destroy();
+      loadNextVideo();
+    }, 5000); // Retry after 5 seconds
+  }
+
+  // Listen for resize events to adjust player dimensions
+  window.addEventListener('resize', function() {
+    if (player) {
+      player.setSize(window.innerWidth, window.innerHeight);
+    }
+  });
+
 </script>
 
 </body>
