--- a/show/index.html
+++ b/show/index.html
@@ -3,16 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Play YouTube Videos Sequentially with Auto Refresh</title>
+  <title>Play YouTube Videos Sequentially with Auto Refresh and End Detection</title>
   <script src="https://www.youtube.com/iframe_api"></script>
   <style>
     /* Optional: CSS for centering the player */
     #player {
-      width: 100vw; /* Full width of viewport */
-      height: 100vh; /* Full height of viewport */
       position: absolute;
-      top: 0;
-      left: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
     }
   </style>
 </head>
@@ -43,7 +49,7 @@
           'autoplay': 1,
           'controls': 0,
           'fs': 1, // Allow fullscreen
-          'loop': 1,
+          'loop': 0, // Disable looping
           'rel': 0,
           'showinfo': 0,
           'disablekb': 1,
@@ -65,7 +71,13 @@
   function onPlayerStateChange(event) {
     if (event.data === YT.PlayerState.ENDED) {
       currentIndex++;
-      loadNextVideo();
+      if (currentIndex < videoIds.length) {
+        loadNextVideo(); // Load next video if available
+      } else {
+        // End of playlist, stop playback
+        player.stopVideo();
+        console.log("End of playlist");
+      }
     }
   }
 
